--- a/student_manage/templates/nav.html
+++ b/student_manage/templates/nav.html
@@ -1,22 +1,23 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Student Management</a>
+    <a class="navbar-brand" href="#" style="padding-right: 200px;">Student Management</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">All Students</a>
+          <a class="nav-link " aria-current="page" href="#">All Students</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Add Students</a>
         </li>
-         <form class="d-flex" role="search">
+
+      </ul>
+    </div>
+             <form class="d-flex" role="search">
       <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
       <button class="btn btn-success" type="submit">Search</button>
     </form>
-      </ul>
-    </div>
   </div>
 </nav>
