--- a/student_manage/templates/list_student.html
+++ b/student_manage/templates/list_student.html
@@ -2,7 +2,8 @@
 
 {% block content %}
 
-<table class="table table-hover table-striped table-dark">
+<div class="container mt-5">
+  <table class="table table-hover table-striped table-dark table-responsive">
   <thead>
     <tr class="table-active">
       <th scope="col">ID</th>
@@ -57,12 +58,13 @@
           </div>
         </div>
 <!-- End of Button trigger modal -->
-     <a href="{% url 'update' student.pk %}" class="btn btn-primary btn-sm">Update</a> 
-        <button type="button" class="btn btn-primary btn-sm">Delete</button>
+     <a href="{% url 'update' student.pk %}" class="btn btn-primary btn-sm"><i class="bi bi-pencil-square"></i>Update</a> 
+       <a href="{% url 'delete' student.pk %}" class="btn btn-danger btn-sm"><i class="bi bi-trash-fill"></i>Delete</a>
       </td>
     </tr>
     {% endfor %}
   </tbody>
 </table>
+</div>
 
 {% endblock %}
