--- a/student_manage/templates/add.html
+++ b/student_manage/templates/add.html
@@ -1,13 +1,22 @@
 {% extends 'base.html' %}
 
 {% block content %}
-
-
-<form action="" method="POST" enctype="multipart/form-data">
+<h1 class="text-center">Add Student</h1>
+<div class="col-6 offset-3 mt-5 p-5">
+    <form action="" method="POST" class="mt-3 p-3">
     {% csrf_token %}
-
-    {{ form.as_p}}
-
-    <button type="submit">Add</button>
+    {% for field in form %}
+        <div class="fieldWrapper" style="margin-bottom: 15px;>
+            {{ field.errors }}
+            {{ field.label_tag }} {{ field }}
+            {% if field.help_text %}
+                <p class="help" id="{{ field.auto_id }}_helptext">
+                    {{ field.help_text|safe }}
+                </p>
+            {% endif %}
+        </div>
+    {% endfor %}
+    <button type="submit" class="btn btn-primary">Submit</button>
 </form>
+</div>
 {% endblock %}
