--- a/student_manage/templates/base.html
+++ b/student_manage/templates/base.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>{% block title %} Student|Manage {% endblock %}</title>
     <!--Bootstrap cdn-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!--Bootstrap cdn-->
@@ -54,5 +54,11 @@ $(document).ready(function() {
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <div class="container d-flex justify-content-center">
+        <footer>
+      <p>&copy; 2024 Student Management. All rights reserved.</p>
+      <small>Made with ❤️ Powered by Django</small>
+    </footer>
+    </div>
   </body>
 </html>
