--- a/student_manage/templates/nav.html
+++ b/student_manage/templates/nav.html
@@ -15,8 +15,9 @@
 
       </ul>
     </div>
-             <form class="d-flex" role="search">
-      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+             <form action="{% url 'search' %}" method="POST"   class="d-flex" role="search">
+      {% csrf_token %}
+      <input class="form-control me-2" type="search" name="output" placeholder="Search" aria-label="Search">
       <button class="btn btn-success" type="submit">Search</button>
     </form>
   </div>
