--- a/student_manage/templates/update.html
+++ b/student_manage/templates/update.html
@@ -1,19 +1,30 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<h1 class="text-center">Update</h1>
 
 
 
-
-<form action="" method="POST" enctype="multipart/form-data">
+<div class="col-6 offset-3 mt-3  mt-5 p-5 ">
+    <form action="" method="POST">
     {% csrf_token %}
-
-    {{ form.as_p}}
-
-
-    <button type="submit">Update</button>
+    {% for field in form %}
+        <div class="fieldWrapper" style="margin-bottom: 15px;">
+            {{ field.errors }}
+            {{ field.label_tag }} {{ field }}
+            {% if field.help_text %}
+                <p class="help" id="{{ field.auto_id }}_helptext">
+                    {{ field.help_text|safe }}
+                </p>
+            {% endif %}
+        </div>
+    {% endfor %}
+    <button type="submit" class="btn btn-primary">Update</button>
 </form>
-
-
-
+</div>
 {% endblock %}
+
+
+
+
+
