--- a/student_manage/templates/base.html
+++ b/student_manage/templates/base.html
@@ -54,7 +54,7 @@ $(document).ready(function() {
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <div class="container d-flex justify-content-center">
+    <div class="container d-flex justify-content-center mt-5">
         <footer>
       <p>&copy; 2024 Student Management. All rights reserved.</p>
       <small>Made with ❤️ Powered by Django</small>
