--- a/student_manage/templates/nav.html
+++ b/student_manage/templates/nav.html
@@ -12,13 +12,36 @@
         <li class="nav-item">
           <a class="nav-link" href="{% url 'add' %}">Add Students</a>
         </li>
+        <!--Login/Logout functionality-->
+      {% if user.is_authenticated %}
+                <li class="nav-item me-3">
+                    <form action="{% url 'accounts:logout' %}" method="POST" class="nav-link p-0 m-0">
+                        {% csrf_token %}
+                        <button type="submit" class="btn btn-primary">
+                            Logout
+                        </button>
+                    </form>
+                </li>
+
+                <li class="nav-item me-3">
+                    <a class="nav-link" href="{% url 'accounts:profile' %}">Profile</a>
+                </li>
+                        {% else %}
+                <li class="nav-item me-3">
+                    <a class="nav-link" href="{% url 'accounts:login' %}">Login</a>
+                </li>
+            {% endif %}
+            <!--End of Login/Logout functionality-->
+
 
       </ul>
     </div>
-             <form action="{% url 'search' %}" method="POST"   class="d-flex" role="search">
-      {% csrf_token %}
-      <input class="form-control me-2" type="search" name="output" placeholder="Search" aria-label="Search">
+    <!--App Search Functionality-->
+               <form class="d-flex" role="search" method="POST" action="{% url 'search' %}">
+              {% csrf_token %}
+      <input class="form-control me-2" type="search" name="output" placeholder="Search..." aria-label="Search">
       <button class="btn btn-success" type="submit">Search</button>
     </form>
+    <!--End of App Search Functionality-->
   </div>
 </nav>
